
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


typedef int * tBTA_DM_BLE_REF_VALUE ;
typedef int tBTA_DM_BLE_PF_PARAM_CBACK ;
typedef int tBTA_DM_BLE_PF_FILT_PARAMS ;
typedef int * tBTA_DM_BLE_PF_FILT_INDEX ;
struct TYPE_5__ {int event; } ;
struct TYPE_6__ {int * p_target; int * ref_value; int * p_filt_param_cback; int filt_params; int * filt_index; int * action; TYPE_1__ hdr; } ;
typedef TYPE_2__ tBTA_DM_API_SCAN_FILTER_PARAM_SETUP ;
typedef int tBLE_BD_ADDR ;
typedef int * UINT8 ;
typedef int UINT16 ;


 int APPL_TRACE_API (char*,int *) ;
 int BTA_DM_API_SCAN_FILTER_SETUP_EVT ;
 int UNUSED (int *) ;
 int bta_sys_sendmsg (TYPE_2__*) ;
 int memcpy (int *,int *,int) ;
 int memset (TYPE_2__*,int ,int) ;
 scalar_t__ osi_malloc (int) ;

void BTA_DmBleScanFilterSetup(UINT8 action, tBTA_DM_BLE_PF_FILT_INDEX filt_index,
                              tBTA_DM_BLE_PF_FILT_PARAMS *p_filt_params,
                              tBLE_BD_ADDR *p_target,
                              tBTA_DM_BLE_PF_PARAM_CBACK *p_cmpl_cback,
                              tBTA_DM_BLE_REF_VALUE ref_value)
{

    tBTA_DM_API_SCAN_FILTER_PARAM_SETUP *p_msg;
    APPL_TRACE_API ("BTA_DmBleScanFilterSetup: %d", action);

    UINT16 len = sizeof(tBTA_DM_API_SCAN_FILTER_PARAM_SETUP) + sizeof(tBLE_BD_ADDR);

    if ((p_msg = (tBTA_DM_API_SCAN_FILTER_PARAM_SETUP *) osi_malloc(len)) != ((void*)0)) {
        memset (p_msg, 0, len);

        p_msg->hdr.event = BTA_DM_API_SCAN_FILTER_SETUP_EVT;
        p_msg->action = action;
        p_msg->filt_index = filt_index;
        if (p_filt_params) {
            memcpy(&p_msg->filt_params, p_filt_params, sizeof(tBTA_DM_BLE_PF_FILT_PARAMS));
        }
        p_msg->p_filt_param_cback = p_cmpl_cback;
        p_msg->ref_value = ref_value;

        if (p_target) {
            p_msg->p_target = (tBLE_BD_ADDR *)(p_msg + 1);
            memcpy(p_msg->p_target, p_target, sizeof(tBLE_BD_ADDR));
        }

        bta_sys_sendmsg(p_msg);
    }
}
